--- a/Chatbot/domain/domain_forms.yml
+++ b/Chatbot/domain/domain_forms.yml
@@ -23,3 +23,8 @@ forms:
     required_slots:
       - slot_eh_answer
   ########################################################################################
+  ############################### SEND QUESTION TO TEACHER ###############################
+  form_teacher_help:
+    required_slots:
+      - slot_teacher_help
+  ########################################################################################
