--- a/Chatbot/domain/domain_slots.yml
+++ b/Chatbot/domain/domain_slots.yml
@@ -2,6 +2,15 @@ version: "3.1"
 
 # ------------------- SLOTS -------------------
 slots:
+  ## SEND QUESTION TO TEACHER ##
+  slot_teacher_help:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+        conditions:
+          - active_loop: form_teacher_help
+
   ## ANSWER QUESTIONS ##
   slot_error_cause_information:
     type: list
