--- a/Chatbot/domain/domain.yml
+++ b/Chatbot/domain/domain.yml
@@ -33,7 +33,7 @@ responses:
   - text: "Desculpe, estou com dificuldade em entender o que quer 🤕. Prometo adicionar ao meu vocabulário, mas por enquanto peço que escreva de forma diferente 😔"
 
   utter_congratulate:
-  - text: "Boa, continue assim!"
+  - text: "Apenas...perfecto 🤌"
   - text: "Isso mesmo 😎!"
 
   utter_refresh_memory:
@@ -43,13 +43,14 @@ responses:
   - text: "Pode pergunta! 😁"
 
   utter_start_error_guidance:
-  - text: "Parece estar com alguns problemas no seu código. Proponho um pequeno diálogo, o que diz? (sim/não)"
+  - text: "<ajuda>Parece estar com alguns problemas no seu código. Proponho um pequeno diálogo, o que diz? (sim/não)</ajuda>"
+  - text: "<ajuda>Reparei que está com um erro no seu algoritmo. Proponho um pequeno diálogo, o que diz? (sim/não)</ajuda>"
   # utter_ask_<form_name>_<slot_name>
 #  utter_ask_form_eg_start_slot_eg_start:
 #    - text: "Parece estar com alguns problemas no seu código. Proponho um pequeno diálogo, o que diz? (sim/não)"
 
   utter_remember_help:
-    - text: '<code_print>Só relembrar que se precisar de ajuda no exercício me mande um "Me ajuda no exercício?"'
+    - text: '<ajuda>Só relembrar que se precisar de ajuda no exercício me mande um "Me ajuda no exercício?"</ajuda>'
 
   utter_are_you_sure:
   - text: "Tem a certeza?"
@@ -87,4 +88,10 @@ responses:
   - text: "De volta ao erro..."
 
   utter_send_question_teacher:
-    - text: 'Para mandar a mensagem por favor começe a frase com "Pergunta:"'
+  - text: 'Para mandar a mensagem por favor começe a frase com "Pergunta:"'
+
+  utter_no_help:
+  - text: 'Desculpe, neste exercício a minha ajuda passa mais por responder a perguntas de conceitos. Para ver alguns exemplos, veja a parte dos conceitos presente quando passa o mouse por cima do i, dentro do círculo branco acima.'
+
+  utter_logic_errors:
+    - text: 'Se o seu código não produz nenhum erro mas mesmo assim está errado, aqui vão algumas sugestões:\n-- Está a usar uma string em vez de uma variável (para chamar uma variável NÃO a envolva em aspas ("))\n-- Se tem de usar uma equação matemática tenha em atenção a ordem em que os cálculos são executados (se não souber qual é, me diga "ordem dos operadores")\n-- Se tem de usar uma condição tenha em atenção a diferença de maior/menor (>/<) para MAIOR OU IGUAL/MENOR OU IGUAL (>=/<=)'
